evidence_library/EC2/regions/sa-east-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-00901e9aa64cfb0de",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-01ffa99920cec3103",
            "SecurityGroupArn": "arn:aws:ec2:sa-east-1:111111111111:security-group/sg-00901e9aa64cfb0de",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-00901e9aa64cfb0de"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "0de1cf41-e634-4218-94d5-1ce8e83fb07c",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "0de1cf41-e634-4218-94d5-1ce8e83fb07c",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "960",
            "date": "Fri, 06 Feb 2026 16:25:30 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
